More extensible quota interface
