# src/shadowbox/server/manager_service.ts
@@ -179,11 +179,11 @@ export class ShadowsocksManagerService {
       const accessKeyId = req.params.id;
       const quota = req.params.quota;
       // TODO(alalama): remove these checks once the repository supports typed errors.
-      if (!quota || !quota.quotaBytes || !quota.windowHours) {
+      if (!quota || !quota.quota || !quota.window) {
         return next(new restify.InvalidArgumentError(
-            'Must provide a quota value with "quotaBytes" and "windowHours"'));
+            'Must provide a quota value with "quota.bytes" and "window.hours"'));
       }
-      if (quota.quotaBytes < 0 || quota.windowHours < 0) {
+      if (quota.quota.bytes < 0 || quota.window.hours < 0) {
         return next(new restify.InvalidArgumentError('Must provide positive quota values'));
       }
       const success = await this.accessKeys.setAccessKeyQuota(accessKeyId, quota);
